--- a/basic/CRUD/style.css
+++ b/basic/CRUD/style.css
@@ -18,3 +18,79 @@ body{
     padding:20px;
     box-shadow: 1px 1px 2ox rgba(0,0, 0,0.125);
 }  
+
+.container .title{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    color: blueviolet;
+    text-transform: uppercase;
+    text-align: center;
+    
+}
+
+.container .foam{
+    width: 100%;
+}
+.container .foam .input_feild{
+    margin-bottom: 15px;
+    display:flex;
+
+
+}
+
+.container .foam .input_feild label{
+    
+    width: 200px;
+}
+.container .foam .input_feild .custom_select{
+    position: relative;
+    width: 20%;
+    height: 37px;
+}
+
+.container .foam .input_feild .custom_select select
+{
+    -webkit-appearance: none;
+    appearance: none;
+    position: relative;
+    width: 100%;
+    height:100%;
+    border-radius: 3px;
+    outline: none;
+
+}
+
+.container .foam .input_feild .custom_select:before{
+    content: "";
+    position:absolute;
+    top: 10px;
+    right: 20px;
+    
+    border: 8px solid rgb(0, 0, 0);
+    border-color: red transparent transparent transparent;
+
+}
+
+.container .foam .input_feild .input:focus
+ {
+    before: 1px solid purple;
+
+
+
+}
+
+.container .foam .input_feild  .check p
+{
+font-size: 15px;
+color: aquamarine;
+}
+
+.container .foam  .input_feild .check {
+    width:15px;
+    height: 15px;
+    position: relative;
+    display: block;
+    cursor: pointer;
+
+}
